--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build-n-run": "sh run.sh"
+    "build-n-run": "sh build-n-run.sh",
+    "build": "sh build.sh"
   },
   "repository": {
     "type": "git",
@@ -21,10 +22,10 @@
   "devDependencies": {
     "@types/node": "^20.5.6",
     "rollup": "^3.28.1",
+    "rollup-plugin-dts": "^6.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
     "dotenv": "^16.3.1"
   }
 }
