--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es2016",
-        "module": "ES6",
+        "target": "ES2017",
+        "module": "ESNext",
         "rootDir": "./src/",
         "moduleResolution": "node",
         "outDir": "./build/converted/",
