--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "homepage": "https://github.com/kpverse/deploy-next-app#readme",
   "devDependencies": {
     "@types/node": "^20.5.6",
+    "dotenv": "^16.3.1",
     "rollup": "^3.28.1",
     "rollup-plugin-dts": "^6.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "chalk": "^4.1.2"
   }
 }
