--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
 # BUILD_FOLDER_PATH=<PATH_TO_BUILD_FOLDER>
-# TARGET_REPO_PATH=<PATH_TO_TARGET_REPOSITORY>
-# DEVELOPMENT_MODE=true
+# DEPLOYMENT_REPO_PATH=<PATH_TO_DEPLOYMENT_REPOSITORY>
