--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "@kpverse/next-deploy",
+  "name": "@kpverse/deploy-nextjs",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "deploy-nextjs": "./bin/index.js"
+  },
   "scripts": {
     "build-n-run": "sh build-n-run.sh",
     "build": "sh build.sh"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kpverse/next-deploy.git"
+    "url": "git+https://github.com/kpverse/deploy-nextjs.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kpverse/next-deploy/issues"
+    "url": "https://github.com/kpverse/deploy-nextjs/issues"
   },
-  "homepage": "https://github.com/kpverse/next-deploy#readme",
+  "homepage": "https://github.com/kpverse/deploy-nextjs#readme",
   "devDependencies": {
     "@types/node": "^20.5.6",
     "dotenv": "^16.3.1",
