--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "ESNext",
         "rootDir": "./src/",
         "moduleResolution": "node",
-        "outDir": "./build/converted/",
+        "outDir": "./build/",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
