--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy-nextjs": "bin/index.js"
   },
   "scripts": {
-    "build-and-run": "sh build-and-run.sh",
+    "build-and-run": "sh build.sh && sh run.sh",
     "build": "sh build.sh"
   },
   "files": [
@@ -36,6 +36,8 @@
   },
   "homepage": "https://kpverse.in/deploy-nextjs",
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.83",
     "@types/node": "^20.5.6",
     "dotenv": "^16.3.1",
     "rollup": "^3.28.1",
