--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@kpverse/deploy-nextjs",
   "version": "0.1.0",
-  "description": "Automate NextJS deployment on GitHub Pages",
+  "description": "NextJS Deployment Utility from KPVERSE",
   "main": "bin/index.js",
   "types": "types/index.d.ts",
   "bin": {
     "deploy-nextjs": "bin/index.js"
   },
   "scripts": {
-    "build-and-run": "sh build.sh && sh run.sh",
-    "build": "sh build.sh"
+    "build-and-run": "node build.js && node ./bin/index.js",
+    "build": "node build.js"
   },
   "files": [
     "bin/index.js",
